--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
-        <!-- ✅ Clé API Google Maps -->
-        <meta-data
+        <!-- 👇 AJOUTEZ CETTE LIGNE ICI -->
+        <meta-data 
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCL3xPuxOlUMzh33k-z941HAn62HV_6qyE" />
+            android:value="${GOOGLE_MAPS_API_KEY}"/>
 
         <activity
             android:name=".MainActivity"
